# stock-analysis-agents

./: README.md  chatbot_cloud.py  chatbot_function_calling.py  chatbot_ui.html  frontend_api.py  pyproject.toml  requirements.txt  requirements_chatbot.txt  verify_setup.py
agents/: agent_utils.py  fundamental_analyst_server.py  groq_llm.py  macro_analyst_server.py  news_sentiment_analyst_server.py  predictor_agent_server.py  regulatory_analyst_server.py  strategist_orchestrator.py  technical_analyst_server.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/capabilities/: page.tsx
frontend/app/components/: AnalysisDetailView.tsx  InvestorAdvisorCard.tsx  OrchestratorCard.tsx
notebooks/: kaggle_submission_complete.ipynb  update_nb.py
scripts/: start_full_system.sh
